revert protobuf and cosmpy deps

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ deps =
     packaging==21.3
     py-multibase>=1.0.0
     py-multicodec>=0.2.0
-    protobuf<4
+    protobuf<=3.20.1
     requests>=2.22.0
     mistune==2.0.3
     tomte[isort]==0.1.5
@@ -48,7 +48,7 @@ deps =
     eth-account==0.5.6
     ; for password encryption in cosmos
     pycryptodome>=3.10.1
-    cosmpy>=0.4.1,<=0.6.2
+    cosmpy>=0.4.1,<0.5.0
     certifi<=2022.6.15.1
     google-api-python-client<=2.60.0
     idna<=3.3
@@ -100,17 +100,6 @@ commands =
     {[commands-local-install]commands}
     pytest -rfE plugins/aea-ledger-fetchai/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_fetchai --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
     pytest -rfE plugins/aea-ledger-ethereum/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-    
-
-[testenv:deps]
-deps = 
-    {[tests-common]deps}
-    pytest-custom-exit-code==0.3.0
-    pipdeptree
-commands =
-    {[commands-local-install]commands}
-    pipdeptree
-    
 
 [testenv:py3.10]
 basepython = python3.10
