tox.ini deps updated: protobuf<4

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ deps =
     packaging==21.3
     py-multibase>=1.0.0
     py-multicodec>=0.2.0
-    protobuf<=3.20.1
+    protobuf<4
     requests>=2.22.0
     mistune==2.0.3
     tomte[isort]==0.1.5
