initial python 3.11 support

--- a/tox.ini
+++ b/tox.ini
@@ -43,9 +43,9 @@ deps =
     asn1crypto==1.4.0
     bech32==1.2.0
     ; aea_ledger_ethereum
-    web3==5.25.0
+    web3==5.31.3
     ipfshttpclient==0.8.0a2
-    eth-account==0.5.6
+    eth-account==0.5.9
     ; for password encryption in cosmos
     pycryptodome>=3.10.1
     cosmpy>=0.4.1,<0.5.0
@@ -116,6 +116,24 @@ commands = {[test-packages]commands}
 
 [testenv:plugins-py3.10]
 basepython = python3.10
+usedevelop = True
+deps = {[test-plugins]deps}
+commands = {[test-plugins]commands}
+
+
+[testenv:py3.11]
+basepython = python3.11
+usedevelop = True
+deps = {[test-framework]deps}
+commands = {[test-framework]commands}
+
+[testenv:packages-py3.11]
+basepython = python3.11
+deps = {[test-packages]deps}
+commands = {[test-packages]commands}
+
+[testenv:plugins-py3.11]
+basepython = python3.11
 usedevelop = True
 deps = {[test-plugins]deps}
 commands = {[test-plugins]commands}
