--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,10 +19,11 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
+          sudo apt-get install python3.11-dev
           sudo apt-get autoremove
           sudo apt-get autoclean
           pip install pipenv
@@ -49,7 +50,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/setup-go@v3
         with:
           go-version: "1.17.7"
@@ -91,7 +92,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
@@ -109,7 +110,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/setup-go@v3
         with:
           go-version: "1.17.7"
@@ -154,7 +155,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
@@ -176,7 +177,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/setup-node@v1
         with:
           node-version: 12.x
@@ -204,7 +205,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/setup-node@v1
         with:
           node-version: 12.x
@@ -237,7 +238,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python_version: ["3.10",]
+        python_version: ["3.11",]
     timeout-minutes: 10
     runs-on: ${{ matrix.os }}
     steps:
@@ -266,7 +267,7 @@ jobs:
           - { os: windows-latest, shell: "msys2 {0}" }
           - { os: ubuntu-latest, shell: bash }
 #          - { os: macos-latest, shell: bash }
-        python_version: ["3.10",]
+        python_version: ["3.11",]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@master
@@ -298,7 +299,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/setup-go@v3
         with:
           go-version: "1.17.7"
@@ -326,7 +327,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/setup-go@v3
         with:
           go-version: "1.17.7"
@@ -344,9 +345,9 @@ jobs:
           # pull pre-built images
           docker pull valory/open-acn-node:latest
       - name: Framework integration tests
-        run: tox -e py3.10 -- -m 'integration and not unstable and not ledger and not profiling'
+        run: tox -e py3.11 -- -m 'integration and not unstable and not ledger and not profiling'
       - name: Packages integration tests
-        run: tox -e packages-py3.10 -- -m 'integration and not unstable and not ledger and not profiling'
+        run: tox -e packages-py3.11 -- -m 'integration and not unstable and not ledger and not profiling'
 
   profiling_checks:
     continue-on-error: True
@@ -363,7 +364,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/setup-go@v3
         with:
           go-version: "1.17.7"
@@ -378,7 +379,7 @@ jobs:
           unzip protoc-3.19.4-linux-x86_64.zip -d protoc
           sudo mv protoc/bin/protoc /usr/local/bin/protoc
       - name: Framework integration tests
-        run: tox -e py3.10 -- -m 'profiling'
+        run: tox -e py3.11 -- -m 'profiling'
 
   integration_checks_ledger:
     continue-on-error: True
@@ -395,7 +396,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get update --fix-missing
@@ -403,9 +404,9 @@ jobs:
           sudo apt-get autoclean
           pip install tomte[tox]==0.2.2
       - name: Framework integration tests
-        run: tox -e py3.10 -- -m 'integration and not unstable and ledger and not profiling'
+        run: tox -e py3.11 -- -m 'integration and not unstable and ledger and not profiling'
       - name: Packages integration tests
-        run: tox -e packages-py3.10 -- -m 'integration and not unstable and ledger and not profiling'
+        run: tox -e packages-py3.11 -- -m 'integration and not unstable and ledger and not profiling'
 
   platform_checks:
     continue-on-error: True
@@ -420,7 +421,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python_version: ['3.7', '3.8', '3.9', '3.10']
+        python_version: ['3.7', '3.8', '3.9', '3.10', '3.11']
     timeout-minutes: 120
     steps:
       - uses: actions/checkout@master
@@ -509,13 +510,13 @@ jobs:
         run: |
           tox -e plugins-py${{ matrix.python_version }} -- -m 'not integration and not unstable and not profiling'
 
-      - if: matrix.os == 'ubuntu-latest' && matrix.python_version == '3.10'
+      - if: matrix.os == 'ubuntu-latest' && matrix.python_version == '3.11'
         name: Show full coverage report
         run: |
           pip install tomte[tests]==0.2.2
           coverage report -m -i
 
-      - if: matrix.os == 'ubuntu-latest' && matrix.python_version == '3.10'
+      - if: matrix.os == 'ubuntu-latest' && matrix.python_version == '3.11'
         name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
@@ -538,7 +539,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.10"]
+        python-version: ["3.11"]
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@master
