--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ known_local_folder=tests
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,PACKAGES,LOCALFOLDER
 
 [mypy]
-python_version = 3.7
+python_version = 3.8
 strict_optional = True
 
 # temporary until fixed
@@ -316,6 +316,9 @@ ignore_missing_imports = True
 ignore_missing_imports=True
 
 [mypy-flashbots.*]
+ignore_missing_imports=True
+
+[mypy-asyncio.*]
 ignore_missing_imports=True
 
 [darglint]
