--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 ; we set the associated flag (e.g. for linting we don't need
 ; the package installation).
 [tox]
-envlist = bandit, safety, black, black-check, isort, isort-check, fix-copyright, check-copyright, hash-check, docs, flake8, liccheck, mypy, pylint, vulture, {plugins-,}py{3.7,3.8,3.9,3.10,3.10-cov}, dependencies-check, package-version-checks, lock-packages, package-dependencies-checks, plugins_deps, fix-doc-hashes, check-doc-links-hashes, check-generate-all-protocols, spell-check, generate-api-documentation
+envlist = bandit, safety, black, black-check, isort, isort-check, fix-copyright, check-copyright, hash-check, docs, flake8, liccheck, mypy, pylint, vulture, {plugins-,}py{3.8,3.9,3.10,3.10-cov,3.11}, dependencies-check, package-version-checks, lock-packages, package-dependencies-checks, plugins_deps, fix-doc-hashes, check-doc-links-hashes, check-generate-all-protocols, spell-check, generate-api-documentation
 ; when running locally we don't want to fail for no good reason
 skip_missing_interpreters = true
 
@@ -391,16 +391,6 @@ passenv = *
 extras = all
 deps = {[tests-common]deps}
 
-[testenv:py3.7]
-basepython = python3.7
-deps = {[testenv_multi]deps}
-commands = {[test-framework]commands}
-
-[testenv:packages-py3.7]
-basepython = python3.7
-deps = {[testenv_multi]deps}
-commands = {[test-packages]commands}
-
 [testenv:py3.8]
 basepython = python3.8
 deps = {[testenv_multi]deps}
@@ -420,13 +410,6 @@ commands = {[test-framework]commands}
 basepython = python3.9
 deps = {[testenv_multi]deps}
 commands = {[test-packages]commands}
-
-[testenv:plugins-py3.7]
-basepython = python3.7
-deps = 
-    {[testenv_multi]deps}
-    pytest-custom-exit-code==0.3.0
-commands = {[test-plugins]commands}
 
 [testenv:plugins-py3.8]
 basepython = python3.8
