chore: update tox file

--- a/tox.ini
+++ b/tox.ini
@@ -150,6 +150,23 @@ usedevelop = True
 deps = {[test-plugins-lte-3.9]deps}
 commands = {[test-plugins-lte-3.9]commands}
 
+[testenv:py3.11]
+basepython = python3.11
+usedevelop = True
+deps = {[test-framework]deps}
+commands = {[test-framework]commands}
+
+[testenv:packages-py3.11]
+basepython = python3.11
+deps = {[test-packages]deps}
+commands = {[test-packages]commands}
+
+[testenv:plugins-py3.11]
+basepython = python3.11
+usedevelop = True
+deps = {[test-plugins-lte-3.9]deps}
+commands = {[test-plugins-lte-3.9]commands}
+
 [testenv:bandit]
 skipsdist = True
 skip_install = True
