tomte and pyyaml updated

--- a/tox.ini
+++ b/tox.ini
@@ -246,20 +246,25 @@ commands =
 [testenv:docs]
 skipsdist = True
 skip_install = True
+usedevelop = True
 deps =
-    tomte[docs]==0.2.4
-commands = pip3 install git+https://github.com/pugong/mkdocs-mermaid-plugin.git#egg=mkdocs-mermaid-plugin
-           mkdocs build --clean
+    poetry
+commands = 
+    pip3 install "tomte[docs] @ git+https://github.com/valory-xyz/tomte.git@2fc4be7c819b0cca8d24345b83f4384655e9a197"
+    pip3 install git+https://github.com/pugong/mkdocs-mermaid-plugin.git#egg=mkdocs-mermaid-plugin
+    mkdocs build --clean
 
 [testenv:docs-serve]
 skipsdist = True
 skip_install = True
 deps =
-    tomte[docs]==0.2.4
-commands = pip3 install git+https://github.com/pugong/mkdocs-mermaid-plugin.git#egg=mkdocs-mermaid-plugin
-           mkdocs build --clean
-           python -c 'print("###### Starting local server. Press Control+C to stop server ######")'
-           mkdocs serve -a localhost:8080
+    poetry
+commands = 
+    pip3 install "tomte[docs] @ git+https://github.com/valory-xyz/tomte.git@2fc4be7c819b0cca8d24345b83f4384655e9a197"
+    pip3 install git+https://github.com/pugong/mkdocs-mermaid-plugin.git#egg=mkdocs-mermaid-plugin
+    mkdocs build --clean
+    python -c 'print("###### Starting local server. Press Control+C to stop server ######")'
+    mkdocs serve -a localhost:8080
 
 [testenv:flake8]
 skipsdist = True
@@ -444,16 +449,20 @@ commands = {[test-plugins-lte-3.9]commands}
 skipsdist = True
 usedevelop = True
 deps =
-    tomte[docs]==0.2.4
     docspec==2.0.2
     docspec-python==2.0.2
-commands = {toxinidir}/scripts/generate_api_docs.py --check-clean
+    poetry
+commands =
+    pip3 install "tomte[docs] @ git+https://github.com/valory-xyz/tomte.git@2fc4be7c819b0cca8d24345b83f4384655e9a197"    
+    {toxinidir}/scripts/generate_api_docs.py --check-clean
 
 [testenv:generate-api-documentation]
 skipsdist = True
 usedevelop = True
 deps =
-    tomte[docs]==0.2.4
     docspec==2.0.2
     docspec-python==2.0.2
-commands = {toxinidir}/scripts/generate_api_docs.py
+    poetry
+commands =
+    pip3 install "tomte[docs] @ git+https://github.com/valory-xyz/tomte.git@2fc4be7c819b0cca8d24345b83f4384655e9a197"
+    {toxinidir}/scripts/generate_api_docs.py
