--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps =
     docker==4.2.0
     pexpect==4.8.0
     GitPython==3.1.27
-    packaging==21.3
+    packaging>=23.1,<24.0
     py-multibase>=1.0.0
     py-multicodec>=0.2.0
     protobuf==3.19.5
@@ -445,8 +445,8 @@ skipsdist = True
 usedevelop = True
 deps =
     tomte[docs]==0.2.13
-    docspec==2.0.2
-    docspec-python==2.0.2
+    docspec==2.2.1
+    docspec-python==2.2.1
 commands = {toxinidir}/scripts/generate_api_docs.py --check-clean
 
 [testenv:generate-api-documentation]
