cosmpy bumped to 0.6.0

--- a/Pipfile
+++ b/Pipfile
@@ -39,7 +39,7 @@ GitPython = "==3.1.27"
 requests = "==2.28.1"
 idna = "<=3.3"
 web3 = "==5.31.4"
-cosmpy = ">=0.4.1,<0.5.0"
+cosmpy = "==0.6.0"
 semver = "<3.0.0,>=2.9.1"
 py-multibase = ">=1.0.0"
 py-multicodec = ">=0.2.0"
