--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ deps =
     eth-account>=0.5.9,<0.6.0
     ; for password encryption in cosmos
     pycryptodome>=3.10.1
-    cosmpy==0.6.0
+    open-aea-cosmpy==0.6.3
     certifi<=2022.6.15.1
     google-api-python-client<=2.60.0
     idna<=3.3
