--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ defusedxml = "==0.6.0"
 # ^ still used?
 docker = "==4.2.0"
 ecdsa = ">=0.15"
-eth-account = ">=0.5.9,<0.6.0"
+eth-account = ">=0.8.0,<0.9.0"
 gym = "==0.15.6"
 hypothesis = "==6.21.6"
 ipfshttpclient = "==0.8.0a2"
@@ -38,8 +38,9 @@ pytest-custom-exit-code = "==0.3.0"
 GitPython = "==3.1.27"
 requests = "==2.28.1"
 idna = "<=3.3"
-web3 = "==5.31.4"
-open-aea-cosmpy = "==0.6.3"
+open-aea-cosmpy = "0.6.5"
+open-aea-web3 = "==6.0.1"
+open-aea-flashbots = "==1.3.0"
 semver = "<3.0.0,>=2.9.1"
 py-multibase = ">=1.0.0"
 py-multicodec = ">=0.2.0"
@@ -50,7 +51,7 @@ tomte = {version = "==0.2.13", extras = ["tox", "tests"]}
 docspec = "==2.2.1"
 docspec-python = "==2.2.1"
 hexbytes = "==0.3.0"
-apduboy = ">=0.5.0"
+ledgerwallet = "==0.1.3"
 construct = "<=2.10.61"
 
 [packages]
