--- a/tox.ini
+++ b/tox.ini
@@ -44,12 +44,12 @@ deps =
     asn1crypto==1.4.0
     bech32==1.2.0
     ; aea_ledger_ethereum
-    web3==5.31.4
+    open-aea-web3==6.0.1
     ipfshttpclient==0.8.0a2
-    eth-account>=0.5.9,<0.6.0
+    eth-account>=0.8.0,<0.9.0
     ; for password encryption in cosmos
     pycryptodome>=3.10.1
-    open-aea-cosmpy==0.6.3
+    open-aea-cosmpy==0.6.5
     certifi<=2022.6.15.1
     google-api-python-client<=2.60.0
     idna<=3.3
@@ -57,7 +57,7 @@ deps =
     psutil==5.7.0
     setuptools==59.6.0
     protobuf==3.19.5
-    apduboy>=0.5.0
+    ledgerwallet==0.1.3
     construct<=2.10.61
     defusedxml==0.6.0
     semver>=2.9.1,<3.0.0
