--- a/Pipfile
+++ b/Pipfile
@@ -38,7 +38,7 @@ pytest-custom-exit-code = "==0.3.0"
 GitPython = "==3.1.27"
 requests = "==2.28.1"
 idna = "<=3.3"
-open-aea-cosmpy = "0.6.5"
+open-aea-cosmpy = "==0.6.5"
 open-aea-web3 = "==6.0.1"
 open-aea-flashbots = "==1.3.0"
 semver = "<3.0.0,>=2.9.1"
