feat: add support for `arm/v7` platform builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -223,8 +223,8 @@ jobs:
         run: |
           # export `TAG` variable
           source env.sh
-          docker buildx build --platform linux/amd64,linux/arm64 -t valory/open-aea-user:$TAG -f user-image/Dockerfile . --push
-          docker buildx build --platform linux/amd64,linux/arm64 -t valory/open-aea-user:latest -f user-image/Dockerfile . --push
+          docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t valory/open-aea-user:$TAG -f user-image/Dockerfile . --push
+          docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t valory/open-aea-user:latest -f user-image/Dockerfile . --push
 
   publish-deploy-images:
     name: Publish Deploy Images
