--- a/Pipfile
+++ b/Pipfile
@@ -31,15 +31,15 @@ openapi-core = "==0.13.2"
 openapi-spec-validator = "==0.2.8"
 packaging = ">=23.1,<24.0"
 pexpect = "==4.8.0"
-protobuf = "==3.19.5"
+protobuf = ">=4.21.6,<5.0.0"
 psutil = "==5.7.0"
 pycryptodome = ">=3.10.1"
 pytest-custom-exit-code = "==0.3.0"
 GitPython = "==3.1.27"
 requests = "==2.28.1"
 idna = "<=3.3"
-open-aea-cosmpy = "==0.6.5"
-open-aea-web3 = "==6.0.1"
+open-aea-cosmpy = "==0.6.6"
+web3 = ">=6.0.0,<7"
 semver = "<3.0.0,>=2.9.1"
 py-multibase = ">=1.0.0"
 py-multicodec = ">=0.2.0"
