--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps =
     packaging>=23.1,<24.0
     py-multibase>=1.0.0
     py-multicodec>=0.2.0
-    protobuf==3.19.5
+    protobuf>=4.21.6,<5.0.0
     requests==2.28.1
     mistune==2.0.3
     tomte[isort]==0.2.13
@@ -44,19 +44,18 @@ deps =
     asn1crypto==1.4.0
     bech32==1.2.0
     ; aea_ledger_ethereum
-    open-aea-web3==6.0.1
+    web3>=6.0.0,<7
     ipfshttpclient==0.8.0a2
     eth-account>=0.8.0,<0.9.0
     ; for password encryption in cosmos
     pycryptodome>=3.10.1
-    open-aea-cosmpy==0.6.5
+    open-aea-cosmpy==0.6.6
     certifi<=2022.6.15.1
     google-api-python-client<=2.60.0
     idna<=3.3
     numpy>=1.18.1
     psutil==5.7.0
     setuptools==59.6.0
-    protobuf==3.19.5
     ledgerwallet==0.1.3
     construct<=2.10.61
     defusedxml==0.6.0
@@ -187,14 +186,14 @@ skipsdist = True
 skip_install = True
 deps =
     tomte[black]==0.2.13
-commands = black aea benchmark examples packages plugins scripts tests
+commands = black aea benchmark examples packages plugins scripts tests --exclude ".*_pb2.py"
 
 [testenv:black-check]
 skipsdist = True
 skip_install = True
 deps =
     tomte[black]==0.2.13
-commands =black aea benchmark examples packages plugins scripts tests --check --verbose
+commands =black aea benchmark examples packages plugins scripts tests --check --verbose --exclude ".*_pb2.py"
 
 [testenv:isort]
 skipsdist = True
