fix: set `PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python1 so that the HW plugin tests can run in CI

--- a/tox.ini
+++ b/tox.ini
@@ -148,6 +148,9 @@ basepython = python3.10
 usedevelop = True
 deps = {[test-plugins-lte-3.9]deps}
 commands = {[test-plugins-lte-3.9]commands}
+; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
+setenv = 
+    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:py3.11]
 basepython = python3.11
@@ -165,6 +168,9 @@ basepython = python3.11
 usedevelop = True
 deps = {[test-plugins-lte-3.9]deps}
 commands = {[test-plugins-lte-3.9]commands}
+; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
+setenv = 
+    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:bandit]
 skipsdist = True
@@ -433,11 +439,17 @@ deps =
     {[testenv_multi]deps}
     pytest-custom-exit-code==0.3.0
 commands = {[test-plugins]commands}
+; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
+setenv = 
+    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:plugins-py3.9]
 basepython = python3.9
 deps = {[test-plugins-lte-3.9]deps}
 commands = {[test-plugins-lte-3.9]commands}
+; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
+setenv = 
+    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:check-api-docs]
 skipsdist = True
