chore: fix import errors and add `--no-deps` flag to flashbots plugin installation

--- a/tox.ini
+++ b/tox.ini
@@ -316,7 +316,7 @@ deps =
     tomte[pylint]==0.2.13
 commands =
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum
-    python -m pip install file://{toxinidir}/plugins/aea-ledger-ethereum-flashbots
+    python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum-flashbots
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-cosmos
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-fetchai
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-solana
