fix: plugin test env

--- a/tox.ini
+++ b/tox.ini
@@ -115,6 +115,7 @@ commands =
 deps =
     {[tests-common]deps}
     pytest-custom-exit-code==0.3.0
+    open-aea-flashbots==1.4.0
 commands =
     {[commands-local-install]commands}
     pytest -rfE plugins/aea-ledger-fetchai/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_fetchai --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
@@ -125,7 +126,7 @@ commands =
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum-hwi
     pytest -rfE plugins/aea-ledger-ethereum-hwi/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum_hwi --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
 
-    python -m pip install file://{toxinidir}/plugins/aea-ledger-ethereum-flashbots
+    python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum-flashbots
     pytest -rfE plugins/aea-ledger-ethereum-flashbots/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum_flashbots --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
 
     python -m pip install file://{toxinidir}/plugins/aea-ledger-solana
