--- a/tox.ini
+++ b/tox.ini
@@ -478,3 +478,15 @@ deps =
     docspec==2.2.1
     docspec-python==2.2.1
 commands = {toxinidir}/scripts/generate_api_docs.py
+
+[testenv:check-dependencies]
+deps =
+    toml==0.10.2
+commands =
+    {toxinidir}/scripts/check_dependencies.py --check
+
+[testenv:update-dependencies]
+deps =
+    toml==0.10.2
+commands =
+    {toxinidir}/scripts/check_dependencies.py
