--- a/tox.ini
+++ b/tox.ini
@@ -246,6 +246,7 @@ commands =
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-cli-ipfs
     aea packages lock
     aea --registry-path=./tests/data/packages packages lock
+    python {toxinidir}/scripts/check_doc_ipfs_hashes.py --fix
 
 [testenv:package-version-checks]
 skipsdist = True
