chore: tox target for checking dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,6 @@ gym = "==0.15.6"
 hypothesis = "==6.21.6"
 ipfshttpclient = "==0.8.0a2"
 liccheck = "==0.6.0"
-matplotlib = "<3.4,>=3.3.0"
 memory-profiler = "==0.57.0"
 # ^ still used?
 numpy = ">=1.18.1"
@@ -59,3 +58,5 @@ construct = "<=2.10.61"
 werkzeug = "*"
 pytest-asyncio = "*"
 multidict = "*"
+toml = "==0.10.2"
+matplotlib = "<3.4,>=3.3.0"
