--- a/tox.ini
+++ b/tox.ini
@@ -477,3 +477,13 @@ deps =
     docspec==2.2.1
     docspec-python==2.2.1
 commands = {toxinidir}/scripts/generate_api_docs.py
+
+[testenv:update-dependencies]
+deps =
+    toml==0.10.2
+commands = {toxinidir}/scripts/check_dependencies.py
+
+[testenv:check-dependencies]
+deps =
+    toml==0.10.2
+commands = {toxinidir}/scripts/check_dependencies.py --check
