--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,8 @@ deps =
     gym==0.15.6
     hypothesis==6.21.6
     numpy>=1.18.1
-    openapi-core==0.13.2
-    openapi-spec-validator==0.2.8
+    openapi-core==0.15.0
+    openapi-spec-validator<0.5.0,>=0.4.0
     asn1crypto<1.5.0,>=1.4.0
     tomte[tests]==0.2.13
 
