fix: ignore safety error

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ envlist = bandit, safety, black, black-check, isort, isort-check, fix-copyright,
 skip_missing_interpreters = true
 
 [packages-deps]
-deps = 
+deps =
     gym==0.15.6
     aiohttp<4.0.0,>=3.8.5
     gym==0.15.6
@@ -60,9 +60,9 @@ deps =
     construct<=2.10.61
     defusedxml==0.6.0
     semver<3.0.0,>=2.9.1
-    
+
 [extra-deps]
-deps = 
+deps =
     memory-profiler==0.57.0
     multidict
     pytest-asyncio
@@ -78,7 +78,7 @@ deps =
     setuptools==59.6.0
 
 [commands-local-install]
-commands = 
+commands =
     pip install {toxinidir}[all]
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-cosmos
@@ -87,7 +87,7 @@ commands =
 
 
 [test-framework]
-deps = 
+deps =
     {[tests-common]deps}
 commands =
     ; for some reason tox installs aea without respect to the dependencies version specified in seetup.py. at least in CI env
@@ -96,7 +96,7 @@ commands =
     pytest -rfE --doctest-modules aea tests/ --durations=0 --cov=aea --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc --cov-append {posargs}
 
 [test-packages]
-deps = 
+deps =
     {[tests-common]deps}
 commands =
     ; for some reason tox installs aea without respect to the dependencies version specified in setup.py. at least in CI env
@@ -105,7 +105,7 @@ commands =
     aea test --cov --append packages --durations=0 {posargs}
 
 [test-plugins]
-deps = 
+deps =
     {[tests-common]deps}
     pytest-custom-exit-code==0.3.0
     hexbytes==0.3.0
@@ -115,7 +115,7 @@ commands =
     pytest -rfE plugins/aea-ledger-ethereum/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
     pytest -rfE plugins/aea-ledger-cosmos/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_cosmos --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
     pytest -rfE plugins/aea-cli-ipfs/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_cli_ipfs --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-    
+
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum-hwi
     pytest -rfE plugins/aea-ledger-ethereum-hwi/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum_hwi --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
 
@@ -158,7 +158,7 @@ usedevelop = True
 deps = {[test-plugins-lte-3.9]deps}
 commands = {[test-plugins-lte-3.9]commands}
 ; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
-setenv = 
+setenv =
     PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:py3.11]
@@ -178,7 +178,7 @@ usedevelop = True
 deps = {[test-plugins-lte-3.9]deps}
 commands = {[test-plugins-lte-3.9]commands}
 ; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
-setenv = 
+setenv =
     PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:bandit]
@@ -265,7 +265,7 @@ commands = {toxinidir}/scripts/check_package_versions_in_docs.py
 [testenv:package-dependencies-checks]
 skipsdist = True
 usedevelop = True
-deps = 
+deps =
     {[testenv]deps}
     {[packages-deps]deps}
 commands =
@@ -338,7 +338,7 @@ skipsdist = True
 skip_install = True
 deps =
     tomte[safety]==0.2.13
-commands = safety check -i 37524 -i 38038 -i 37776 -i 38039 -i 39621 -i 40291 -i 39706 -i 51358 -i 51499 -i 67599
+commands = safety check -i 37524 -i 38038 -i 37776 -i 38039 -i 39621 -i 40291 -i 39706 -i 51358 -i 51499 -i 67599 -i 70612
 
 [testenv:vulture]
 skipsdist = True
@@ -444,12 +444,12 @@ commands = {[test-packages]commands}
 
 [testenv:plugins-py3.8]
 basepython = python3.8
-deps = 
+deps =
     {[testenv_multi]deps}
     pytest-custom-exit-code==0.3.0
 commands = {[test-plugins]commands}
 ; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
-setenv = 
+setenv =
     PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:plugins-py3.9]
@@ -457,7 +457,7 @@ basepython = python3.9
 deps = {[test-plugins-lte-3.9]deps}
 commands = {[test-plugins-lte-3.9]commands}
 ; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
-setenv = 
+setenv =
     PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:check-api-docs]
