fix: account for the minimum allowed tip on chains
- The ledger is using the history of the fees to estimate the tip.
- Gnosis chain has a minimum acceptable fee of 1GWEI.
- For some reason, the history of the blocks' fees may also contain values smaller than the minimum acceptable fee, such as for block 38256427 for example.
- The smaller values interfere with our estimation.

--- a/packages/valory/connections/ledger/connection.yaml
+++ b/packages/valory/connections/ledger/connection.yaml
@@ -37,6 +37,7 @@ config:
           max_gas_fast: 1500
           fee_history_blocks: 10
           fee_history_percentile: 5
+          min_allowed_tip: 1000000000
           default_priority_fee: null
           fallback_estimate:
             maxFeePerGas: 20000000000
